# docker-assignment1

./: Dockerfile  README.md  pyproject.toml
app/: main.py
tests/: test_main.py
